--- a/sass/components/_site-nav.scss
+++ b/sass/components/_site-nav.scss
@@ -82,17 +82,40 @@
 
     /* Site nav end */
     
+.menu-button {
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+.menu-button .icon-cross {
+  display: none;
+}
+.menu-button.is-open .icon-cross {
+  display: block;
+}
+.menu-button.is-open .icon-menu {
+  display: none;
+}
 
+    
     /* MOBILE */
     @media screen and (max-width: $tablet) {
     .site-nav__ul {
     visibility: hidden;
     }
 
-    .mob-menu {
+    .menu-button {
     visibility: visible;
     }
     }
 
+    @media screen and (min-width: $tablet) {
+      .menu-button {
+      visibility: hidden;
+      }
+      }
+  
     
       
