--- a/css/main.css
+++ b/css/main.css
@@ -425,13 +425,40 @@ img {
 }
 
 /* Site nav end */
+.menu-button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+.menu-button .icon-cross {
+  display: none;
+}
+
+.menu-button.is-open .icon-cross {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
 /* MOBILE */
 @media screen and (max-width: 768px) {
   .site-nav__ul {
     visibility: hidden;
   }
-  .mob-menu {
+  .menu-button {
     visibility: visible;
+  }
+}
+@media screen and (min-width: 768px) {
+  .menu-button {
+    visibility: hidden;
   }
 }
 /* Header */
@@ -746,6 +773,7 @@ img {
 @media screen and (max-width: 767px) {
   .header {
     background-size: 480px 400px;
+    background-size: cover;
     padding-top: 118px;
     padding-bottom: 118px;
   }
@@ -812,6 +840,21 @@ img {
 }
 
 /* Особливості (special) end */
+@media screen and (max-width: 768px) {
+  .special {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .special__div {
+    width: 480px;
+  }
+  .special__h3 {
+    text-align: center;
+  }
+  .special__p {
+    text-align: center;
+  }
+}
 /* Tasks */
 /* tasks */
 .tasks {
@@ -873,6 +916,12 @@ img {
 }
 
 /* Tasks end */
+/* Mobile */
+@media screen and (max-width: 1140px) {
+  .tasks {
+    display: none;
+  }
+}
 /* Наша команда (Command) */
 /* command bg */
 .command {
@@ -969,6 +1018,25 @@ img {
 }
 
 /* Наша команда (Command) end */
+/* Mobile */
+@media screen and (max-width: 480px) {
+  .command__ul {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .command__li {
+    margin: 0;
+    margin-bottom: 30px;
+    width: 480px;
+  }
+  .command__li img {
+    width: 100%;
+    height: 460px;
+  }
+}
 /* Clients */
 /* clients h2 */
 .clients__h2 {
@@ -1027,6 +1095,25 @@ img {
 }
 
 /* Clients end */
+/* mobile */
+@media screen and (max-width: 480px) {
+  .clients__ul {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-negative: 2;
+        flex-shrink: 2;
+  }
+  .clients__a {
+    width: 210px;
+  }
+  .clients__li {
+    margin: 0;
+  }
+  .clients__li:nth-child(2n+1) {
+    margin-right: 25px;
+    margin-bottom: 30px;
+  }
+}
 /* Footer */
 /* footer */
 .footer {
@@ -1182,9 +1269,9 @@ img {
 
 /* Submit button */
 .subscribe__button {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1221,6 +1308,55 @@ img {
 }
 
 /* End Footer */
+/* Mobile */
+@media screen and (max-width: 768px) {
+  .footer .container {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .footer__logo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .footer__address {
+    margin-bottom: 60px;
+  }
+  .footer__address--li {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .subscribe {
+    margin-top: 60px;
+  }
+  .connect__h2 {
+    text-align: center;
+  }
+  .connect__p {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .subscribe__email {
+    width: 450px;
+    margin-bottom: 20px;
+  }
+  .subscribe__button {
+    margin-left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+  }
+}
 /* Button Portfolio */
 .button-ul {
   display: -webkit-box;
