--- a/sass/components/_command.scss
+++ b/sass/components/_command.scss
@@ -82,3 +82,21 @@ background-color: $whiteF5;
     }}
 
     /* Наша команда (Command) end */
+
+
+    /* Mobile */
+@media screen and (max-width: $mobile) {
+    .command__ul {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .command__li {
+    margin: 0;
+    margin-bottom: 30px;
+    width: $mobile;
+    }
+    .command__li img {
+    width: 100%;
+    height: 460px;
+    }
+}
