--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -256,6 +256,7 @@
     @media screen and (max-width: 767px) {
         .header {
             background-size: $mobile 400px;
+            background-size: cover;
             padding-top: 118px;
             padding-bottom: 118px;
         }
