--- a/css/main.css
+++ b/css/main.css
@@ -302,6 +302,7 @@ a {
 img {
   display: block;
   max-width: 100%;
+  height: auto;
 }
 
 /* Section padding */
@@ -448,7 +449,7 @@ img {
 }
 
 /* MOBILE */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .site-nav__ul {
     visibility: hidden;
   }
@@ -459,6 +460,11 @@ img {
 @media screen and (min-width: 768px) {
   .menu-button {
     visibility: hidden;
+  }
+  .site-nav__ul--tab {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 10px;
   }
 }
 /* Header */
@@ -781,6 +787,17 @@ img {
     font-size: 26px;
   }
 }
+@media screen and (min-width: 768px) {
+  .header {
+    background-size: 768px 400px;
+    background-size: cover;
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
+  .header__h {
+    font-size: 26px;
+  }
+}
 /* Особливості (special) */
 /* special */
 .special {
@@ -840,13 +857,28 @@ img {
 }
 
 /* Особливості (special) end */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .special {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
   }
   .special__div {
     width: 480px;
+  }
+  .special__h3 {
+    text-align: center;
+  }
+  .special__p {
+    text-align: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .special {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .special__div {
+    width: 354px;
   }
   .special__h3 {
     text-align: center;
@@ -1019,7 +1051,7 @@ img {
 
 /* Наша команда (Command) end */
 /* Mobile */
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .command__ul {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -1035,6 +1067,22 @@ img {
   .command__li img {
     width: 100%;
     height: 460px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .command__ul {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .command__li {
+    margin: 0;
+    margin-bottom: 30px;
+  }
+  .command__li:nth-child(2n+1) {
+    margin-right: 30px;
   }
 }
 /* Clients */
@@ -1096,22 +1144,46 @@ img {
 
 /* Clients end */
 /* mobile */
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .clients__ul {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    -ms-flex-negative: 2;
-        flex-shrink: 2;
   }
   .clients__a {
     width: 210px;
   }
-  .clients__li {
+  .clients .container {
     margin: 0;
   }
-  .clients__li:nth-child(2n+1) {
-    margin-right: 25px;
+  .clients__li {
+    margin: 0;
     margin-bottom: 30px;
+  }
+  .clients__li:nth-child(2n+1) {
+    margin-right: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .clients__ul {
+    width: 768px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .clients .container {
+    margin: 0;
+  }
+  .clients__li {
+    margin: 0;
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+  .clients__li:nth-child(2n+1) {
+    margin: 0;
+    margin-right: 30px;
+  }
+  .clients__a {
+    width: 226px;
+    margin: 0;
   }
 }
 /* Footer */
@@ -1309,7 +1381,7 @@ img {
 
 /* End Footer */
 /* Mobile */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .footer .container {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -1338,6 +1410,61 @@ img {
   }
   .subscribe {
     margin-top: 60px;
+  }
+  .connect__h2 {
+    text-align: center;
+  }
+  .connect__p {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .subscribe__email {
+    width: 450px;
+    margin-bottom: 20px;
+  }
+  .subscribe__button {
+    margin-left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+  }
+}
+/* Tablet */
+@media screen and (min-width: 768px) {
+  .footer .container {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .footer__logo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .footer__address {
+    margin-bottom: 60px;
+  }
+  .footer__address--li {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .subscribe {
+    margin-top: 60px;
+    margin-left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+  }
+  .connect__div {
+    margin-left: 165px;
   }
   .connect__h2 {
     text-align: center;
