--- a/sass/components/_command.scss
+++ b/sass/components/_command.scss
@@ -85,7 +85,7 @@ background-color: $whiteF5;
 
 
     /* Mobile */
-@media screen and (max-width: $mobile) {
+@media screen and (max-width: 767px) {
     .command__ul {
         flex-wrap: wrap;
         justify-content: center;
@@ -99,4 +99,16 @@ background-color: $whiteF5;
     width: 100%;
     height: 460px;
     }
+}
+@media screen and (min-width: 768px) {
+    .command__ul {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .command__li {
+        margin: 0;
+        margin-bottom: 30px;
+    &:nth-child(2n+1) {
+        margin-right: 30px;
+    }}
 }
