--- a/sass/components/_tasks.scss
+++ b/sass/components/_tasks.scss
@@ -51,7 +51,7 @@
 
         /* Mobile */
     
-    @media screen and (max-width: $desktop) {
+    @media screen and (max-width: 1199px) {
     .tasks {
         display: none;
     }
