--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -208,7 +208,7 @@ transform: translateX(-50%);
 
      /* Tablet */
 
-     @media screen and (min-width: 768px) {
+     @media screen and (min-width: 768px) and (max-width: 1199px) {
       .footer .container {
       flex-wrap: wrap;
       justify-content: center;
