--- a/sass/components/_site-nav.scss
+++ b/sass/components/_site-nav.scss
@@ -5,18 +5,17 @@
 .site-nav {
     background: $white;
     border-bottom: 1px solid $whiteECE;
+    position: relative;
     }
     
-    /* nav flex */
-    .site-nav__div,
-    .site-nav__ul,
-    .site-nav__nav {
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    gap: 50px;
+/* Site nav div */
+    .site-nav__div {
+      display:flex;
+      justify-content: space-between;
+      align-items:center;
+      height: 60px;
     }
-    
+
     /* Webstudio logo */
     .site-nav__logo {
     font-family: 'Raleway';
@@ -26,13 +25,18 @@
     line-height: 1.2;
     }
 
+    .site-nav__ul {
+      @media screen and (max-width: 767px) {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 300px;
+      }
+    }
 
     /* студія портфоліо контакти text */
     .site-nav__page {
-    position: relative; 
     font-weight: 500;
     color: $black;
-    display: block;
     padding: 32px 0;
     transition-property: color;
     transition-duration: 250ms;
@@ -42,7 +46,13 @@
       &:hover,
       &:focus {
       color: $blue;
-      }}
+      }
+    @media screen and (max-width: 767px) {
+    font-size: 40px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    display: block;
+    }}
     /* Current page */
     .site-nav__current {
     color: $blue;
@@ -56,15 +66,15 @@
     height: 4px;
     background: $blue;
     border-radius: 2px;
-    }}
+    @media screen and (max-width: 767px) {
+      background: none;
+     }}}
     /* Site nav contacts */
     .site-nav__contacts {
     color: $grey80;
     font-weight: 500;
     fill: $grey75;
     display: flex;
-    align-items: center;
-    justify-content: center;
     transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -81,44 +91,3 @@
     }   
 
     /* Site nav end */
-    
-.menu-button {
-  display: inline-flex;
-  margin: 0;
-  padding: 0;
-  border: none;
-  background-color: transparent;
-}
-.menu-button .icon-cross {
-  display: none;
-}
-.menu-button.is-open .icon-cross {
-  display: block;
-}
-.menu-button.is-open .icon-menu {
-  display: none;
-}
-
-    
-    /* MOBILE */
-    @media screen and (max-width: 767px) {
-    .site-nav__ul {
-    visibility: hidden;
-    }
-
-    .menu-button {
-    visibility: visible;
-    }
-    }
-
-    @media screen and (min-width: $tablet) {
-      .menu-button {
-      visibility: hidden;
-      }
-      .site-nav__ul--tab {
-        flex-wrap: wrap;
-        gap: 10px;
-      }
-      }
-      
-  
