--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import './utils/variables';
 @import './utils/breakpoints';
 @import './components/body';
+@import './components/menu';
 @import './components/site-nav';
 @import './components/header';
 @import './components/special';
