--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -9,7 +9,14 @@
     background-size: 1600px 600px;
     padding-top: 200px;
     padding-bottom: 200px;
-    }
+
+    /* 2x screens, retina, 640x480 image */
+@media screen and (min-device-pixel-ratio: 2),
+screen and (min-resolution: 192dpi),
+screen and (min-resolution: 2dppx) {
+  background-image: linear-gradient(to right, rgba(47,48,58,0.4), rgba(47,48,58,0.4)),url(../images/bg@2x.jpg);
+}}
+
     /*  header h1 */
     .header__h {
     font-weight: 900;
@@ -74,6 +81,9 @@
     top: 50%;
     transform: translate(-50%, -50%); 
     padding: 40px;
+    @media screen and (max-width: 767px) {
+      width: 450px;  
+    }
     }
     /* modal p */
     .modal__p {
