--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -4,6 +4,13 @@
     padding: 0;
     border: none;
     background-color: transparent;
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+      fill: $blue;
+    }
 
     @media screen and (min-width: $tablet) {
         display: none;
