--- a/sass/components/_portfolio-posters.scss
+++ b/sass/components/_portfolio-posters.scss
@@ -38,7 +38,10 @@
     .posters-li {
     width: calc((100% - 60px) / 3);
     position: relative;
+    @media screen and (max-width: 767px) {
+    width: 100%
     }
+}
 
     /* posters a*/
     .posters-a {
