--- a/css/main.css
+++ b/css/main.css
@@ -382,17 +382,13 @@ img {
     display: block;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .menu-container {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    gap: 95px;
+    padding: 0;
   }
 }
 
@@ -417,6 +413,16 @@ img {
           align-items: center;
   height: 60px;
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .site-nav__div {
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+}
 
 /* Webstudio logo */
 .site-nav__logo {
@@ -426,9 +432,16 @@ img {
   color: #212121;
   line-height: 1.2;
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .site-nav__logo {
+    top: 50%;
+    -webkit-transform: translateY(25%);
+            transform: translateY(25%);
+  }
+}
 
 @media screen and (max-width: 767px) {
-  .site-nav__ul {
+  .site-nav__ul--nav {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -437,6 +450,22 @@ img {
         -ms-flex-direction: column;
             flex-direction: column;
     padding-left: 20px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .site-nav__ul--nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 50px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    margin-left: 80px;
+    top: 50%;
+    -webkit-transform: translateY(50%);
+            transform: translateY(50%);
   }
 }
 
@@ -464,6 +493,11 @@ img {
     display: block;
   }
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .site-nav__page {
+    padding: 0;
+  }
+}
 
 /* Current page */
 .site-nav__current {
@@ -481,6 +515,11 @@ img {
   border-radius: 2px;
 }
 @media screen and (max-width: 767px) {
+  .site-nav__current::after {
+    background: none;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .site-nav__current::after {
     background: none;
   }
@@ -523,12 +562,22 @@ img {
     display: none;
   }
 }
+@media screen and (min-width: 767px) and (max-width: 1199px) {
+  .site-nav__svg {
+    display: block;
+  }
+}
 
 @media screen and (max-width: 767px) {
   .site-nav__number {
     font-size: 34px;
     letter-spacing: 0.02em;
     color: #2196F3;
+  }
+}
+@media screen and (min-width: 767px) and (max-width: 1199px) {
+  .site-nav__number {
+    padding-top: 10px;
   }
 }
 
@@ -541,6 +590,21 @@ img {
             flex-direction: column-reverse;
     gap: 32px;
     padding-top: 300px;
+  }
+}
+@media screen and (min-width: 767px) and (max-width: 1199px) {
+  .site-nav__ul--tab {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
   }
 }
 
@@ -558,6 +622,11 @@ img {
     line-height: 1.22;
     letter-spacing: 0.02em;
     color: #2196F3;
+  }
+}
+@media screen and (min-width: 767px) and (max-width: 1199px) {
+  .site-nav__link {
+    display: none;
   }
 }
 
@@ -1576,8 +1645,7 @@ img {
             justify-content: center;
   }
   .subscribe {
-    margin-top: 60px;
-    margin-left: 50%;
+    margin-left: 60%;
     -webkit-transform: translateX(-50%);
             transform: translateX(-50%);
   }
@@ -1632,6 +1700,12 @@ img {
 }
 
 @media screen and (max-width: 767px) {
+  .section__mob {
+    padding-top: 0;
+    margin-top: 60px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .section__mob {
     padding-top: 0;
     margin-top: 60px;
@@ -1714,6 +1788,14 @@ img {
     width: 100%;
   }
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .posters-li {
+    width: 354px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
 
 /* posters a*/
 .posters-a {
@@ -1737,11 +1819,29 @@ img {
   -webkit-transform: translateY(0);
           transform: translateY(0);
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .posters-a {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
 
 /* Text box hover */
 .box {
   position: relative;
   overflow: hidden;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .box {
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
 }
 
 /* Overlay */
